fix: add euro and text align end

--- a/styles.css
+++ b/styles.css
@@ -101,8 +101,8 @@ span {
     bottom: -5%;
     right: -5%;
     background-color: rgb(49, 47, 47);
-    width: 2rem;
-    text-align: center;
+    width: 2.75rem;
+    text-align:end;
     font-size: 1.25rem;
     border-top-left-radius: 50%;
     border-bottom-left-radius: 50%;
